Fix spacing and alignment issues (#470)
* Fix byte count alignment

--- a/recon/app/styles/recon/base/event-detail/packets/_manifest.scss
+++ b/recon/app/styles/recon/base/event-detail/packets/_manifest.scss
@@ -16,7 +16,7 @@ $dark-packet-field-border-color: rsa-color(blue, base, $rsa-nearly-opaque);
 $dark-packet-field-bg-color: rsa-color(blue, base, $rsa-translucent);
 $dark-packet-field-hover-bg-color: rsa-color(blue, base, $rsa-opaque);
 
-$packet-offsets-width: 7.25rem !default;
+$packet-offsets-width: 7.15rem !default;
 $session-list-footer-height: 24px !default;
 $tool-size: 24px;
 
