--- a/recon/app/styles/recon/base/meta-content/_manifest.scss
+++ b/recon/app/styles/recon/base/meta-content/_manifest.scss
@@ -5,12 +5,12 @@
     @include rsa-font(header, large);
     color: rsa-color(white);
   }
-  width: 100%;
 }
 .recon-meta-content-item {
   padding: rsa-whitespace(least) 0;
   word-break: break-all;
   .meta-name {
     color: rsa-color(gray, light);
+    padding-right: rsa-whitespace();
   }
 }
